@@ -18,6 +18,10 @@ BUG FIXES
         needing quote() in the expression, bug #1243. Thanks
         to Joseph Voelkel for reporting.
 
+    o   the result from the first group alone may be bigger
+        than the table itself, fixing bug #1245. Thanks to
+        Steve Lianoglou for reporting.
+
 
         *********************************************
         **                                         **
